@@ -1,8 +1,8 @@
 Package: spatialEco
 Type: Package
 Title: Spatial Analysis and Modelling Utilities
-Version: 1.3-0
-Date: 2020-01-16
+Version: 1.3-1
+Date: 2020-01-28
 Authors@R: c(person(family="Evans", given="Jeffrey S.", email = "jeffrey_evans@tnc.org",
              role = c("aut", "cre")))
 Description: Utilities to support spatial data manipulation, query, sampling
